--- a/public/chat-widget.html
+++ b/public/chat-widget.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mental Health Support</title>
+  <title>Chat Widget</title>
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
 
   <style>
+    /* Floating Rocket Button */
     #chat-toggle {
       position: fixed;
       bottom: 20px;
@@ -18,30 +19,31 @@
       width: 60px;
       height: 60px;
       border-radius: 50%;
-      background-color: #0d6efd;
+      background: #0d6efd;
       color: #fff;
-      font-size: 28px;
+      font-size: 26px;
       border: none;
       cursor: pointer;
       z-index: 9999;
     }
 
+    /* Chat Box */
     #chat-box {
       position: fixed;
       bottom: 90px;
       right: 20px;
-      width: 350px;
-      height: 450px;
+      width: 320px;
+      max-height: 450px;
       display: none;
       flex-direction: column;
       z-index: 9999;
     }
 
     .chat-messages {
-      flex: 1;
+      height: 280px;
       overflow-y: auto;
-      padding: 10px;
       background: #f8f9fa;
+      padding: 10px;
     }
 
     .msg-user {
@@ -67,24 +69,20 @@
       padding: 6px 10px;
       border-radius: 12px;
       display: inline-block;
-      white-space: pre-line;
     }
   </style>
 </head>
 
 <body>
-<span></span>
 
-
-<!-- Floating Button -->
-<button id="chat-toggle" type="button">💬</button>
+<!-- Rocket Button -->
+<button id="chat-toggle">🚀</button>
 
 <!-- Chat Box -->
 <div id="chat-box" class="card shadow">
   <div class="card-header bg-primary text-white">
     Mental Health Support
   </div>
-
 
   <div id="messages" class="chat-messages"></div>
 
@@ -95,33 +93,31 @@
           type="text"
           id="message-input"
           class="form-control"
-          placeholder="Type your message..."
-          autocomplete="off"
+          placeholder="Type here..."
           required
         />
-        <button class="btn btn-primary" type="submit">Send</button>
+        <button class="btn btn-primary">Send</button>
       </div>
     </form>
   </div>
 </div>
 
 <script>
-  
   const toggleBtn = document.getElementById("chat-toggle");
   const chatBox = document.getElementById("chat-box");
   const form = document.getElementById("chat-form");
   const input = document.getElementById("message-input");
   const messages = document.getElementById("messages");
 
-  /* ---------- TOGGLE CHAT ---------- */
+  // Toggle chat
   toggleBtn.addEventListener("click", () => {
     chatBox.style.display =
       chatBox.style.display === "flex" ? "none" : "flex";
   });
 
-  /* ---------- SEND MESSAGE ---------- */
+  // Send message
   form.addEventListener("submit", async (e) => {
-    e.preventDefault(); // 🔥 MOST IMPORTANT
+    e.preventDefault();
 
     const text = input.value.trim();
     if (!text) return;
@@ -131,34 +127,23 @@
         <span>${text}</span>
       </div>
     `;
-
     input.value = "";
     messages.scrollTop = messages.scrollHeight;
 
-    try {
-      const res = await fetch("/chat", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ message: text }),
-      });
+    const res = await fetch("/chat", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ message: text }),
+    });
 
-      const data = await res.json();
+    const data = await res.json();
 
-      messages.innerHTML += `
-        <div class="msg-bot">
-          <span>${data.reply}</span>
-        </div>
-      `;
-
-      messages.scrollTop = messages.scrollHeight;
-
-    } catch (err) {
-      messages.innerHTML += `
-        <div class="msg-bot">
-          <span>Something went wrong. Please try again.</span>
-        </div>
-      `;
-    }
+    messages.innerHTML += `
+      <div class="msg-bot">
+        <span>${data.reply}</span>
+      </div>
+    `;
+    messages.scrollTop = messages.scrollHeight;
   });
 </script>
 
